Try to fix wrapping checkbox label

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -244,3 +244,8 @@ input[type=text].form-control {
     }
   }
 }
+
+.review-checkbox {
+  min-width: 87px;
+  display: inline-block;
+}
